--- a/index.html
+++ b/index.html
@@ -68,15 +68,8 @@
             color: #0056b3;
         }
 
-        .login-container {
-            max-width: 400px;
-            margin: 50px auto;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: #f8f9fa;
-        }
     </style>
+    <title>Anasayfa</title>
 </head>
 <body>
 <div class="container-fluid">
@@ -95,7 +88,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="admin2.html">Admin</a>
+                    <a class="nav-link acti ve" href="admin2.html">Admin</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="izin.html">İzin</a>
@@ -111,15 +104,8 @@
         <div class="carousel-item active">
             <img src="prs.img/ai.png" class="d-block w-100" alt="Slide 1">
         </div>
-        <div class="carousel-   item">
-            <img src="prs.img/ai2.webp" class="d-block w-100" alt="Slide 2">
-        </div>
-        <div class="carousel-item">
-            <img src="prs.img/logo.jpg" class="d-block w-100" alt="Slide 3">
-        </div>
     </div>
 </div>
-
 <!-- Featured Content Section -->
 <div class="container mt-5">
     <div class="row">
@@ -129,7 +115,6 @@
                 <div class="card-body">
                     <h5 class="card-title">Akıllı Performans Analitiği</h5>
                     <p class="card-text">Çalışanların performansını sadece mevcut kriterlerle değil, aynı zamanda geçmiş eğilimler ve benzer çalışanlarla karşılaştırmalı olarak analiz eden yapay zeka destekli bir analiz motoru. Bu sistem, performans verilerini analiz ederken çalışanların yetenekleri ve gelişim alanlarına dair öngörülerde bulunur, böylece kişiselleştirilmiş gelişim planları önerir.</p>
-                    <a href="#" class="btn btn-primary">Daha Fazla Bilgi</a>
                 </div>
             </div>
         </div>
@@ -139,7 +124,6 @@
                 <div class="card-body">
                     <h5 class="card-title">Dinamik Zaman Yönetimi</h5>
                     <p class="card-text">Çalışanların iş ve kişisel hayatlarını daha verimli yönetmelerine yardımcı olmak için dinamik zaman yönetimi aracı. Bu özellik, çalışanların iş saatlerini, projeleri ve kişisel etkinliklerini entegre bir takvimde gösterir ve otomatik olarak zaman blokları önerir. Ayrıca, çalışanların iş yükünü dengelemelerine yardımcı olmak için gerçek zamanlı tavsiyeler sunar.</p>
-                    <a href="#" class="btn btn-primary">Daha Fazla Bilgi</a>
                 </div>
             </div>
         </div>
@@ -149,7 +133,6 @@
                 <div class="card-body">
                     <h5 class="card-title">Öngörücü İzin Yönetimi</h5>
                     <p class="card-text">Çalışanların izin ve tatil taleplerini öngörmek için makine öğrenimi algoritmalarını kullanan bir özellik. Sistem, geçmiş izin verilerini ve iş yükü trendlerini analiz ederek hangi dönemlerde izin taleplerinin artabileceğini tahmin eder ve yöneticilere proaktif planlama önerileri sunar. Bu, izin süreçlerini daha verimli hale getirir ve iş gücü planlamasını optimize eder.</p>
-                    <a href="#" class="btn btn-primary">Daha Fazla Bilgi</a>
                 </div>
             </div>
         </div>
@@ -243,11 +226,6 @@
     <div class="container">
         <p>© 2024 Şirket Adı. Tüm hakları saklıdır.</p>
         <p>
-            <a href="#">Gizlilik Politikası</a> |
-            <a href="#">Kullanım Şartları</a> |
-            <a href="#">İletişim</a>
-        </p>
-        <p>
             <a href="https://facebook.com" target="_blank">Facebook</a> |
             <a href="https://twitter.com" target="_blank">Twitter</a> |
             <a href="https://instagram.com" target="_blank">Instagram</a>
@@ -256,9 +234,9 @@
 </footer>
 
 <!-- Bootstrap and jQuery JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK3N5n1p5P3ftwFfh2HfPt5w0k5/T5wQJcQZ/4zqfL8O6xg" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UOa7YgOp8GfQZTRJYzS5n2tIphwRfpN9/yTUE9IhLX41kFZ2KFTd8/XF2NdYXh5M4" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-dQ3N7RIpLlv+VZkc/nF74wUtWyN0N7+GErAqV4t1pF54P3YylX5OgB1v69F5MeP3" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKpYfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGaQRVNYB+AoYqEVF5Jqnj/5o1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 <script>
     document.getElementById('loginForm').addEventListener('submit', function(event) {
