--- a/hizmetler.html
+++ b/hizmetler.html
@@ -207,7 +207,7 @@
                 }
 
                 window.onclick = function (event) {
-                    if (event.target == modal) {
+                    if (event.target === modal) {
                         modal.style.display = "none";
                     }
                 }
