--- a/maas.html
+++ b/maas.html
@@ -279,7 +279,7 @@
         }
 
         window.onclick = function (event) {
-            if (event.target == modal) {
+            if (event.target === modal) {
                 modal.style.display = "none";
             }
         }
